# Seeding

./: .gitattributes  .gitignore  BUSINESS_IMPROVEMENTS.md  BUSINESS_REQUIREMENTS.md  README.md  TZ.md  coverage.xml  pyproject.toml  Диплом.docx
Photo/: 1.csv  results.csv
dataset/datasetAnalisV1/: data.yaml  train.cache  valid.cache
dataset/datasetKlassV1/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetKlassV2/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetKlassV3/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetKlassV4/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetKlassV5/: README.dataset.txt  README.roboflow.txt  data.yaml  test.txt  train.txt  val.txt
dataset/datasetKlassV5Or/: README.dataset.txt  README.roboflow.txt  data.yaml  test.txt  train.txt  val.txt
dataset/datasetSegV2_1Arg/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetSegV5/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/datasetSegV6/: README.dataset.txt  README.roboflow.txt  data.yaml  test.txt  train.txt  val.txt
dataset/datasetSegV7/: README.dataset.txt  README.roboflow.txt  data.yaml  test.txt  train.txt  val.txt
models/: bestCropNew.pt  bestKlass.pt  bestKlassNew.pt  bestKlassSeg.pt  bestKlassSegNew.pt  best_root_cls2.pt
seeding/: config.py  controllers.py  inference.py  main.py  models.py  report.py  requirements.txt  services.py
tests/: test_icon_manager.py  test_inference.py  test_main_window_resilience.py  test_statistics_panel.py  test_tree_widget.py
(+2298 files in other folders)
