[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seeding"
version = "1.0.0"
description = "Simplified desktop GUI for seedling image analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "numpy>=1.23",
    "opencv-python>=4.7.0",
    "Pillow>=9.4.0",
    "PyMuPDF>=1.22.0",
    "ultralytics>=8.0.0",
    "reportlab>=3.6.0",
]

[project.scripts]
seeding = "seeding:main"
